* добавлен этот файл;
* добавлен класс соединений Wire, добавлен юнит-тест для Wire;
