@@ -14,7 +14,7 @@ using namespace std;
 
 template<typename T>
 void test1() {
-    cout<<"Проверка ReLU на двухслойной сети...";
+    cout<<"Проверка ReLU<"<<typeid(T).name()<<"> на двухслойной сети...";
     bool hasException{false};
     try {
 	Model<T> model({2});
@@ -70,9 +70,16 @@ void test1() {
     cout<<"ok."<<endl;
 };
 
+template<typename T>
+void test() {
+    test1<T>();
+};
+
 int main()
 {
-    test1<float>();
+    test<float>();
+    test<double>();
+    test<long double>();
     return 0;
 };
 
