@@ -1,3 +1,7 @@
 * добавлен этот файл;
 * добавлен класс соединений Wire, добавлен юнит-тест для Wire;
-
+***
+* введен дополнительный класс Succession, общий для Model и Successor. Теперь можно
+  составлять композиции из Model;
+* добавлен тест для композиции Model;
+* небольшие изменения тестов - исправлен охват параметров шаблона;
